--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@
 }
 
 .page {
-    max-width: 1200px;
+    max-width: 1170px;
     display: flex;
     justify-content: space-between;
     margin: 64px auto;
@@ -102,7 +102,7 @@
     margin-top: 3.81%;
 }
 
-.trends_title {
+.section_title {
     text-align: center;
     margin-bottom: 0px;
     font-family: open-sans-b, sans-serif;
@@ -110,7 +110,7 @@
     font-size: 20px;
 }
 
-.trends_title::after{
+.section_title::after{
     content:"";
     display: block;
     position: relative;
@@ -469,6 +469,33 @@ padding: 7.7% 20px 20px;
     background-color: #f4f7f6;
     max-width: 1170px;
     margin: 0 auto 74px;
+}
+
+.shop {
+    max-width: 1170px;
+}
+
+.shop__wrapper {
+    display: flex;
+    margin-top: 28px;
+    justify-content: space-between;
+}
+
+.shop__card {
+    display: flex;
+    flex-direction: column;
+    width: 29.65%;
+}
+
+.shop__card-img_wrp {
+    max-width: 300px;
+}
+
+.shop__card-text_wrp {
+    flex-grow: 1;
+    padding: 40px 20px 25px 20px;
+    margin-top: -30px;
+    border: 3px solid rgba(181, 159, 91, 0.7);
 }
 
 .footer_icons {
