--- a/index.css
+++ b/index.css
@@ -95,6 +95,10 @@
     margin: 64px auto;
 }
 
+.visible {
+
+}
+
 .popup {
     background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
@@ -108,8 +112,34 @@
     bottom: 0;
 }
 
-.visible {
+.popup__wrapper {
+    position: relative;
+    width: 30%;
+    max-width: 700px;
+    padding: 30px 20px;
+    background-color: white;
+}
 
+.popup__feedback {
+    font-size: 12px;
+}
+
+.feedback__form {
+    margin-bottom: 20px;
+}
+
+.question__select {
+    display: inline-block;
+    width: 100%;
+    margin-top: 10px;
+    padding: 13px 10px;
+    font-size: inherit;
+    color: grey;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: none;
+    background: #f3f2f2 url(../svg/form-arrows.svg) no-repeat right 10px center;
+    background-size: 8px;
 }
 
 .trends {
