--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@
 }
 
 .header_container {
-    max-width: 1170px;
+    width: 70.5%;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -113,7 +113,7 @@
 	outline: 1px solid #b59f5b;
 	outline-offset: 10px;
 }
-	.burger__menu:before, .menu-burger:after {
+	.burger__menu:before, .burger__menu:after {
 		content:"";
 		width: 100%;
 		height: 20%;
@@ -122,12 +122,15 @@
 		position: absolute;
 		left: 0;
 	}
+
 	.burger__menu:before {
 		top: 0;
+
 	}
 	.burger__menu:after {
 		bottom: 0;
 	}
+
 	.burger__menu-label {
 		width: 100%;
 		height: 20%;
@@ -138,6 +141,10 @@
 		left: 0;
 		top: 50%;
 	}
+
+    .list {
+        display: none;
+    }
 }
 
 
@@ -374,6 +381,8 @@ padding: 7.7% 20px 20px;
 .main_content {
     display: flex;
     justify-content: space-between;
+    width: 90.89%;
+    margin: 0 auto;
 }
 
 .main__wrapper {
@@ -782,3 +791,24 @@ padding: 7.7% 20px 20px;
     clip: rect(1px, 1px, 1px, 1px);
     position: absolute;
   }
+
+  @media screen and (min-width: 641px) and (max-width: 1199px) {
+    .header {
+    background-image: url(./images/banner-bg-tablet.jpg);
+    }
+
+    .header_logo-pic {
+        width: 157px;
+    }
+
+    .header_title {
+        max-width: 600px;
+        margin: 105px auto 0 auto;
+        font-size: 40px;
+        line-height: 1.375;
+    }
+
+    .news_card {
+        flex-direction: column;
+    }
+}
