--- a/index.css
+++ b/index.css
@@ -670,6 +670,7 @@ padding: 7.7% 20px 20px;
 
 .shop__wrapper {
     display: flex;
+    flex-wrap: wrap;
     margin-top: 28px;
     justify-content: space-between;
 }
@@ -797,6 +798,10 @@ padding: 7.7% 20px 20px;
     background-image: url(./images/banner-bg-tablet.jpg);
     }
 
+    .header_container {
+        width: 90.8%;
+    }
+
     .header_logo-pic {
         width: 157px;
     }
@@ -810,5 +815,74 @@ padding: 7.7% 20px 20px;
 
     .news_card {
         flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .trends__card {
+        width: calc(50% - 2.5px);
+        margin-bottom: 4px;
+    }
+
+    .trends__card-link {
+        font-size: 17px;
+    }
+
+    .page {
+        margin: 46px auto 25px;
+    }
+
+    .news__section {
+        margin-right: 35px;
+    }
+
+    .news_pic {
+        max-width: 391px;
+        width: 100%;
+    }
+
+    .news_info {
+        max-width: 391px;
+        margin-top: 16px;
+    }
+
+    .news-text-meta {
+        margin-bottom: 37px;
+    }
+
+    .news_card::after {
+        content: "";
+        display: block;
+        margin-top: 23px;
+        margin-bottom: 40px;
+        width: 100%;
+        height: 3px;
+        background-color: rgba(122, 122, 122, 0.2);
+    }
+
+    .title_link {
+        font-size: 17px;
+    }
+
+    .shop {
+        max-width: 90.8%;
+        margin: 64px auto 0;
+    }
+
+    .shop__card {
+        width: calc(50% - 13.5px);
+        margin-bottom: 25px;
+    }
+
+    .shop__card-img_wrp {
+        width: 87%;
+        margin: 0 auto;
+    }
+
+    .shop__card-title {
+        font-size: 17px;
+    }
+
+    .footer_wrapper {
+        max-width: 90.8%;
     }
 }
