--- a/index.css
+++ b/index.css
@@ -1044,5 +1044,14 @@ padding: 7.7% 20px 20px;
         top: -33px;
         width: 25px;
     }
+
+    .search-button {
+        width: 48px;
+    }
+
+    .search-field {
+        width: 272px;
+    }
+
 }
 
