--- a/index.css
+++ b/index.css
@@ -57,14 +57,15 @@
     color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
+    margin-right: 35px;
 }
 
 .menu_link:hover {
     text-decoration: underline;
 }
 
-.menu_item:nth-last-child(n+2) {
-    margin-right: 35px;
+.menu_link-last {
+    margin-right: 0px;
 }
 
 .header_title {
@@ -105,15 +106,13 @@
 		width: 1.25em;
 		height: 1em;  
 		border: none;
-		padding: 0;
 		background-color: transparent;
 		font-size: 20px;
 		position: relative;
 		text-indent: -9999px;
 		cursor: pointer;
 	}
-	.burger__menu:hover,
-	.burger__menu:focus {
+	.burger__menu:hover, .burger__menu:focus {
 	border: none;
 	outline: 1px solid #b59f5b;
 	outline-offset: 10px;
@@ -140,11 +139,9 @@
 		width: 100%;
 		height: 20%;
 		margin-top: -0.1em;  
-		border-radius: 5px;
 		background-color: #ffffff;  
 		position: absolute;
 		left: 0;
-		top: 50%;
 	}
 
     .list {
@@ -174,8 +171,6 @@
 
 .popup__wrapper {
     position: relative;
-    width: 23.45%;
-    max-width: 700px;
     padding: 30px 20px;
     background-color: white;
 }
@@ -234,7 +229,6 @@
 }
 .radio {
 	position: absolute;
-	clip: rect(1px, 1px, 1px, 1px);
 	height: 1px;
 	width: 1px;
 }
@@ -244,7 +238,6 @@
 .form-textarea {
 	width: 100%;
 	min-height: 133px;
-	resize: none;
 	padding: 10px;
 	margin-top: 10px;
 	font: inherit;
@@ -276,22 +269,19 @@
 }
 .popup__close-btn {
 	position: absolute;
-	top: -20px;
+	top: -39px;
 	right: 0;
-	width: 15px;
-	height: 15px;
+	width: 27px;
 	background-color: transparent;
 	border: none;
 }
 
 .trends {
-    max-width: 100%;
     margin-top: 3.81%;
 }
 
 .section_title {
     text-align: center;
-    margin-bottom: 0px;
     font-family: open-sans-b, sans-serif;
     text-transform: uppercase;
     font-size: 20px;
@@ -329,7 +319,6 @@ padding: 7.7% 20px 20px;
     background-image: url(../netology-project1/images/trend1.jpg);
     background-position: center;
     position: relative;
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -337,7 +326,6 @@ padding: 7.7% 20px 20px;
     background-image: url(../netology-project1/images/trend2.jpg);
     background-position: center;
     position: relative;
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -345,7 +333,6 @@ padding: 7.7% 20px 20px;
     background-image: url(../netology-project1/images/trend3.jpg);
     background-position: center;
     position: relative;
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -353,7 +340,6 @@ padding: 7.7% 20px 20px;
     background-image: url(../netology-project1/images/trend4.jpg);
     background-position: center;
     position: relative;
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -371,7 +357,6 @@ padding: 7.7% 20px 20px;
 .trends_text {
     border: solid 3px rgba(181, 159, 91, 0.6);
     width: 100%;
-    z-index: 1;
     padding: 40px 40px 35px 30px;
 }
 
@@ -386,7 +371,6 @@ padding: 7.7% 20px 20px;
 .main_content {
     display: flex;
     justify-content: space-between;
-    width: 90.89%;
     margin: 0 auto;
 }
 
@@ -404,12 +388,7 @@ padding: 7.7% 20px 20px;
     margin-bottom: 60px;
 }
 
-.news_card:nth-last-child(1) {
-    margin-bottom: 0;
-}
-
 .news_pic {
-    max-width: 381px;
     margin-right: 30px;
 }
 
@@ -454,8 +433,7 @@ padding: 7.7% 20px 20px;
 }
 
 .news-text-meta {
-    margin-top: 37px;
-    margin-bottom: 51px;
+    margin: 37px 0 51px;
 }
 
 .date {
@@ -477,7 +455,7 @@ padding: 7.7% 20px 20px;
     font-size: 15px;
 }
 
-.text_wrapper > p:not(:first-child) {
+.news_text-double {
     margin-top: 17px;
 }
 
@@ -535,7 +513,6 @@ padding: 7.7% 20px 20px;
 .search {
     margin: 60px 0 62px;
     display:flex;
-    width:100%;
   }
 
 .search-button{
@@ -557,7 +534,6 @@ padding: 7.7% 20px 20px;
     padding-left: 18px;
     width: 222px;
     height: 47px;
-    font-size: 13px;
     border: none;
     background-color:#f4f7f6;
   }
@@ -578,7 +554,6 @@ padding: 7.7% 20px 20px;
         background-color:#323232;
       }
     
-  
   .mailing-field{  
     box-sizing: border-box;
     padding-left: 18px;
@@ -597,15 +572,10 @@ padding: 7.7% 20px 20px;
   }
 
   .tags_item {
-    margin-top: 26px;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin: 26px 3px 0;
   }
 
   .tags_link {
-    height: 29px;
-    align-items: center;
-    align-content: space-between;
     text-decoration: none;
     font-family: open-sans-b, sans-serif;
     text-transform: uppercase;
@@ -624,13 +594,10 @@ padding: 7.7% 20px 20px;
   }
 
   .themes_item {
-    margin-top: 14px;
-    margin-left: 3px;
+    margin: 14px 0px 0px 3px;
   }
 
   .themes_link {
-    align-items: center;
-    align-content: space-between;
     text-decoration: none;
     font-family: open-sans-b, sans-serif;
     color: #000000;
@@ -656,10 +623,6 @@ padding: 7.7% 20px 20px;
     font-size: 12px;
   }
 
-.footer {
-    margin: 0 auto;
-}
-
 .footer_wrapper {
     display: flex;
     justify-content: center;
@@ -669,8 +632,7 @@ padding: 7.7% 20px 20px;
 }
 
 .shop {
-    max-width: 1170px;
-    margin-top: 64px;
+    margin-top: 4px;
 }
 
 .shop__wrapper {
@@ -703,10 +665,8 @@ padding: 7.7% 20px 20px;
 }
 
 .shop__card-info {
-    font-family: open-sans-r, sans-serif;
     font-size: 15px;
     line-height: 1.46;
-    font-weight: normal;
 }
 
 .shop__card-link {
@@ -718,7 +678,6 @@ padding: 7.7% 20px 20px;
 
 .shop__card-old_price {
     font-family: open-sans-b, sans-serif;
-    text-transform: uppercase;
     font-size: 14px;
     text-decoration: line-through;
 }
@@ -726,7 +685,6 @@ padding: 7.7% 20px 20px;
 .shop__card-new_price {
     font-family: open-sans-b, sans-serif;
     font-size: 20px;
-    font-weight: bold;
 }
 
 .shop__price-wrp {
@@ -756,10 +714,8 @@ padding: 7.7% 20px 20px;
 .footer_icons {
     list-style: none;
     display: flex;
-}
-
-.footer_links {
-    margin-right: 30px;
+    justify-content: space-between;
+    width: 110px;
 }
 
 .footer_link {
@@ -770,10 +726,6 @@ padding: 7.7% 20px 20px;
     background-size: 16px;
     background-position: center;
     margin: 32px 0;
-}
-
-.footer_links:nth-child(3) {
-    margin-right: 0px;
 }
 
 .footer_link_dribbble {
@@ -799,8 +751,6 @@ padding: 7.7% 20px 20px;
   }
 
   .hidden {
-    width: 1px;
-    height: 1px;
     clip: rect(1px, 1px, 1px, 1px);
     position: absolute;
   }
@@ -825,18 +775,13 @@ padding: 7.7% 20px 20px;
         line-height: 1.375;
     }
 
-    .popup__wrapper {
-        width: 55%;
-    }
-
-    .popup__close-btn {
-        top: -33px;
-        width: 25px;
+    .main_content {
+        width: 90%;
     }
 
     .news_card {
         flex-direction: column;
-        margin-bottom: 0;
+        margin-bottom: 41px;
     }
 
     .trends__card {
@@ -864,20 +809,15 @@ padding: 7.7% 20px 20px;
     .news_info {
         max-width: 391px;
         margin-top: 16px;
+        padding-bottom: 19px;
     }
 
     .news-text-meta {
         margin-bottom: 37px;
     }
 
-    .news_card::after {
-        content: "";
-        display: block;
-        margin-top: 23px;
-        margin-bottom: 40px;
-        width: 100%;
-        height: 3px;
-        background-color: rgba(122, 122, 122, 0.2);
+     .news_card-border {
+         border-bottom: solid 3px rgba(122, 122, 122, 0.2);
     }
 
     .title_link {
@@ -886,7 +826,7 @@ padding: 7.7% 20px 20px;
 
     .shop {
         max-width: 90.8%;
-        margin: 64px auto 0;
+        margin: 24px auto 0;
     }
 
     .shop__card {
@@ -896,7 +836,6 @@ padding: 7.7% 20px 20px;
 
     .shop__card-img_wrp {
         width: 87%;
-        margin: 0 auto;
     }
 
     .shop__card-title {
@@ -934,12 +873,10 @@ padding: 7.7% 20px 20px;
 
     .header_container {
         width: 94.7%;
-        padding-top: 32px;
     }
 
     .trends__card {
         width: 100%;
-        margin-right: 0;
         margin-bottom: 3px;
     }
 
@@ -982,26 +919,21 @@ padding: 7.7% 20px 20px;
 
     .news_card {
         flex-direction: column;
-        margin: 0;
+        margin: 0 0 35px;
     }
+
+    .news_card-border {
+        border-bottom: solid 3px rgba(122, 122, 122, 0.2);
+   }
 
     .news_pic {
         max-width: 100%;
         margin: 0;
     }
-
-    .news_card::after {
-        content: "";
-        display: block;
-        margin-top: 21px;
-        margin-bottom: 35px;
-        width: 100%;
-        height: 3px;
-        background-color: rgba(122, 122, 122, 0.2);
-    }
     
     .news_info {
         margin-top: 16px;
+        padding-bottom: 19px;
     }
 
     .title_link {
@@ -1038,11 +970,6 @@ padding: 7.7% 20px 20px;
 
     .popup__wrapper {
         width: 90%;
-    }
-
-    .popup__close-btn {
-        top: -33px;
-        width: 25px;
     }
 }
 
